--- a/Assignment_6_Yasir.ipynb
+++ b/Assignment_6_Yasir.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPlTsYCjRP7wqPO/OL6SEyu",
+      "authorship_tag": "ABX9TyMiOmeTjXyKWzcW0Lq+3oQk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5408,6 +5408,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "***MODEL#1 : DECISION TREES***"
+      ],
+      "metadata": {
+        "id": "ccRb7Waz4lmq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
@@ -5514,6 +5523,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "***MODEL#2: RANDOM FOREST***"
+      ],
+      "metadata": {
+        "id": "-bHrhfMd4-8M"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Random Forest\n",
@@ -5611,6 +5629,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***MODEL#3: XGBOOST***"
+      ],
+      "metadata": {
+        "id": "ptfoNNOc5IEw"
+      }
     },
     {
       "cell_type": "code",
